Update code for 25.1.3+

--- a/CS/Build.props
+++ b/CS/Build.props
@@ -13,6 +13,7 @@
         <RootNamespace>DevExpress.AvaloniaXpfDemo</RootNamespace>
         <AssemblyName>AvaloniaXpfDemo</AssemblyName>
         <ApplicationIcon>demoicon.ico</ApplicationIcon>
+ 	<NoWarn>DX1000;DX1001;</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
