--- a/CS/Build.References.props
+++ b/CS/Build.References.props
@@ -1,8 +1,8 @@
 <Project>
 
     <PropertyGroup>
-        <DXVer>25.1.1-alpha</DXVer>
-        <DXSkiaVer>3.116.1</DXSkiaVer>
+        <DXVer>25.1.3</DXVer>
+        <DXSkiaVer>3.119.0</DXSkiaVer>
     </PropertyGroup>
 
     <ItemGroup>
